Set up framework for subcommands and migration to picocli